fix display date on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 }
 
 .single .post-date {
+    display: inline-block;
     border: medium none;
     margin: 0;
     padding: 0;
